<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/include_title"
        layout="@layout/title_bar_with_txt" />

    <com.my.customviews.OverScrollView
        android:id="@+id/overScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="25dp"
                android:paddingLeft="20dp"
                android:text="@string/reword_money"
                android:textColor="@color/black"
                android:textSize="@dimen/gooddream_16dp" />

            <RadioGroup
                android:id="@+id/rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_1"
                    style="@style/radioButtonEvaluate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:checked="true"
                    android:text="@string/_0yuan" />

                <RadioButton
                    android:id="@+id/rb_2"
                    style="@style/radioButtonEvaluate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_10yuan" />

                <RadioButton
                    android:id="@+id/rb_3"
                    style="@style/radioButtonEvaluate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_20yuan" />

                <RadioButton
                    android:id="@+id/rb_4"
                    style="@style/radioButtonEvaluate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_50yuan" />

                <RadioButton
                    android:id="@+id/rb_5"
                    style="@style/radioButtonEvaluate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_100yuan" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/selector_bg_linear"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/evaluate_star"
                    android:textColor="@color/black"
                    android:textSize="@dimen/gooddream_14dp" />

                <RatingBar
                    android:id="@+id/ratingbar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:rating="2.3"
                    android:stepSize="0.1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="25dp"
                android:paddingLeft="20dp"
                android:text="@string/impression_label"
                android:textColor="@color/black"
                android:textSize="@dimen/gooddream_16dp" />

            <LinearLayout
                android:id="@+id/linear_evaluate_label"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:paddingLeft="20dp"
                android:text="@string/evaluate_content"
                android:textColor="@color/black"
                android:textSize="@dimen/gooddream_16dp" />

            <EditText
                android:id="@+id/et_commont"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="@drawable/shape_white_10px_stroke_1dp_gray"
                android:gravity="left"
                android:hint="@string/hint_evaluate"
                android:padding="10dp"
                android:textSize="@dimen/gooddream_14dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/anonymity"
                    android:textColor="@color/gooddream_gray_light"
                    android:textSize="@dimen/gooddream_12dp" />

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/tv_ensure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:background="@drawable/selector_bt_ensure"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:clickable="true"
                android:onClick="onClick"
                android:text="@string/commit_comment"
                android:textColor="@color/color_selector_txt_white" />
        </LinearLayout>
    </com.my.customviews.OverScrollView>

</LinearLayout>