<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/include_title"
        layout="@layout/title_bar_with_txt" />

    <com.my.customviews.OverScrollView
        android:id="@+id/overScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="25dp"
                android:paddingLeft="20dp"
                android:text="@string/complaint_label"
                android:textColor="@color/black"
                android:textSize="@dimen/gooddream_16dp" />

            <com.my.customviews.CustomFlowLayout
                android:id="@+id/flowLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </com.my.customviews.CustomFlowLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:paddingLeft="20dp"
                android:text="@string/complaint_content"
                android:textColor="@color/black"
                android:textSize="@dimen/gooddream_16dp" />

            <EditText
                android:id="@+id/et_content"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="@drawable/shape_white_10px_stroke_1dp_gray"
                android:gravity="left"
                android:hint="@string/hint_complaint"
                android:padding="10dp"
                android:textSize="@dimen/gooddream_14dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/anonymity_complaint"
                    android:textColor="@color/gooddream_gray_light"
                    android:textSize="@dimen/gooddream_12dp" />

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/tv_ensure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:background="@drawable/selector_bt_ensure"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:text="@string/commit_complaint"
                android:textColor="@color/color_selector_txt_white" />
        </LinearLayout>


    </com.my.customviews.OverScrollView>

</LinearLayout>