<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.my.customviews.OverScrollView
        android:id="@+id/overScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gooddream_white"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@color/gooddream_white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linear_1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/icon_1_1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/gooddream_14dp"
                        android:text="@string/learning_1_1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/icon_1_2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/gooddream_14dp"
                        android:text="@string/learning_1_2" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/icon_1_3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:textSize="@dimen/gooddream_14dp"
                        android:layout_height="wrap_content"
                        android:text="@string/learning_1_3" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linear_4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/icon_1_4" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/gooddream_14dp"
                        android:text="@string/learning_1_4" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/icon_1_5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/gooddream_14dp"
                        android:text="@string/learning_1_5" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/icon_1_6" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/learning_1_3"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@color/gooddream_white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linear_7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/icon_1_7" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/gooddream_14dp"
                        android:text="@string/learning_1_7" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_8"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/icon_1_8" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:textSize="@dimen/gooddream_14dp"
                        android:layout_height="wrap_content"
                        android:text="@string/learning_1_8" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/icon_1_9" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:textSize="@dimen/gooddream_14dp"
                        android:layout_height="wrap_content"
                        android:text="@string/learning_1_9"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </com.my.customviews.OverScrollView>

</LinearLayout>