<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_all_background"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relative_total_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_main_title"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="onClick">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="fill_vertical"
            android:text="@string/learningDriving_question_bank"
            android:textColor="@color/white"
            android:textSize="@dimen/gooddream_18dp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:padding="13dp"
            android:id="@+id/iv_history" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@color/white">

            <RelativeLayout
                android:id="@+id/relative_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/question_1"
                    android:textColor="@color/gooddream_blue"
                    android:textSize="@dimen/gooddream_16dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/question_2"
                    android:textColor="@color/gooddream_gray_dark"
                    android:textSize="@dimen/gooddream_16dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/question_3"
                    android:textColor="@color/gooddream_gray_dark"
                    android:textSize="@dimen/gooddream_16dp" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relative_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/question_4"
                    android:textColor="@color/gooddream_gray_dark"
                    android:textSize="@dimen/gooddream_16dp" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relative_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/question_5"
                    android:textColor="@color/gooddream_gray_dark"
                    android:textSize="@dimen/gooddream_16dp" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/cusor_bak"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray" />

            <ImageView
                android:id="@+id/cursor"
                android:layout_width="30dp"
                android:layout_height="2dp"
                android:scaleType="matrix"
                android:src="@color/gooddream_blue" />
        </RelativeLayout>
    </LinearLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>
    <!--<RelativeLayout-->
        <!--android:id="@+id/relative_center"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_gravity="center"-->
        <!--android:background="@color/white"></RelativeLayout>-->

</LinearLayout>